<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/nome_produto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/textColor"/>

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digite_produto"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/marca_prod"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNome"
                android:textColor="@color/textColor"/>

            <EditText
                android:id="@+id/editTextMarca"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digite_marca"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/validade"
                app:layout_constraintStart_toStartOf="@+id/editTextMarca"
                app:layout_constraintTop_toBottomOf="@+id/editTextMarca"
                android:textColor="@color/textColor"
                />

            <EditText
                android:id="@+id/editTextValidade"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/digite_validade"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quantidade"
                app:layout_constraintStart_toStartOf="@+id/editTextValidade"
                app:layout_constraintTop_toBottomOf="@+id/editTextValidade"
                tools:text="@string/quantidade"
                android:textColor="@color/textColor"/>

            <EditText
                android:id="@+id/editTextQtd"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName|text|numberDecimal"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/unidade"
                app:layout_constraintStart_toEndOf="@+id/editTextQtd"
                app:layout_constraintTop_toBottomOf="@+id/editTextValidade"
                android:textColor="@color/textColor"/>

            <RadioGroup
                android:id="@+id/radioGroupUnid"
                android:layout_width="103dp"
                android:layout_height="68dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:textColor="@color/textColor">

                <RadioButton
                    android:id="@+id/radioButtonKilos"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:text="@string/kilos"
                    android:textColor="@color/textColor"
                    />

                <RadioButton
                    android:id="@+id/radioButtonLitros"
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:layout_weight="1"
                    android:text="@string/litros"
                    android:textColor="@color/textColor"/>

                <RadioButton
                    android:id="@+id/radioButtonUnit"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:text="@string/unitario"
                    android:textColor="@color/textColor"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/categoria"
                app:layout_constraintStart_toStartOf="@+id/editTextQtd"
                app:layout_constraintTop_toBottomOf="@+id/editTextQtd"
                tools:text="@string/categoria"
                android:textColor="@color/textColor"/>

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:outlineSpotShadowColor="@color/textColor"
                android:background="@color/backgroundColor"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/armazenamento"
                app:layout_constraintStart_toStartOf="@+id/spinnerCategoria"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria"
                tools:text="@string/armazenamento"
                android:textColor="@color/textColor"/>

            <CheckBox
                android:id="@+id/checkBoxArmario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/armario"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:textColor="@color/textColor"
                android:outlineAmbientShadowColor="@color/textColor"/>

            <CheckBox
                android:id="@+id/checkBoxGeladeira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/geladeira"
                app:layout_constraintStart_toEndOf="@+id/checkBoxArmario"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:textColor="@color/textColor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>